[package]
name = "mdrss-cli"
version = "0.1.0"
edition = "2021"
authors = ["0x4ndy <andy@andy.codes>"]
description = "CLI tool to generate RSS feed from markdown files using mdrss"
license = "MIT"
repository = "https://github.com/your-username/mdrss-cli"  # Adjust to your repository

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mdrss = "0.1"
